--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/uikit.min.css" />
 </head>
 <body>
+    <nav class="uk-navbar-container" uk-navbar>
+        <div class="uk-navbar-left">
+            <a class="uk-navbar-item uk-logo" href="#">Logo</a>
+        </div>
+        <div class="uk-navbar-right">
+            <ul class="uk-navbar-nav">
+                <li class="uk-active"><a href="">HOME</a></li>
+                <li class="uk-active"><a href="">ABOUT</a></li>
+                <li class="uk-parent"><a href="">SERVICES</a></li>
+                <li class="uk-parent"><a href="">CLASSES</a></li>
+                <li class="uk-active"><a href="">SCHEDULE</a></li>
+                <li class="uk-parent"><a href="">GALLERY</a></li>
+                <li class="uk-parent"><a href="">CONTACT</a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="uk-section">
         <div class="uk-container">
             <h1 class="uk-heading-primary">This is a title</h1>
